# ORBSLAM2_with_PCL

./: .gitignore  CameraTrajectory.txt  README.md  a.out  commit_template.txt  interface.py  kfinfo.txt.old  makeData.py  mid_pose.txt  realsense_resolver.py  screenshot-1633581755.cam  test.cpp
ORB_SLAM2_modified/: CMakeLists.txt  COMMANDS.txt  CameraTrajectory.txt  build.sh  d435.yaml  d435i.yaml  keyframe_list.txt  kfinfo.txt  realsense_resolver.py  명령어.txt
ORB_SLAM2_modified/Examples/Monocular/: mono_kitti  mono_tum
ORB_SLAM2_modified/Examples/RGB-D/: rgbd_my  rgbd_tum
ORB_SLAM2_modified/Examples/Stereo/: stereo_kitti
ORB_SLAM2_modified/include/: Converter.h  LoopClosing.h  Optimizer.h  pcl_modifier_inSRC.h  pointcloudmapping.h
ORB_SLAM2_modified/src/: Optimizer.cc  pcl_modifier_inSRC.cc  pointcloudmapping.cc
UI/: UI_start_mapping.sh
pcl/: CMakeLists.txt  pcd_downsampling.cpp  pcd_modifier.cpp  pcd_viewer.cpp
